--- a/Ix.NET/Source/NuGet.Config
+++ b/Ix.NET/Source/NuGet.Config
@@ -3,6 +3,7 @@
   <packageSources>
     <clear />
     <add key="Build Packages" value="https://www.myget.org/F/c037199d-41df-4567-b966-25ff65324688/api/v3/index.json" />
+    <add key="CI (RefGen)" value="https://www.myget.org/F/refgen/api/v3/index.json" />
     <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />    
   </packageSources>
   <disabledPackageSources>
