--- a/Ix.NET/Source/NuSpecs/System.Interactive.Providers.nuspec
+++ b/Ix.NET/Source/NuSpecs/System.Interactive.Providers.nuspec
@@ -1,36 +1,45 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
-    <metadata>
-        <id>System.Interactive.Providers</id>
-        <version>$version$</version>
-        <authors>Microsoft</authors>
-        <owners>Microsoft</owners>
-        <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</licenseUrl>
-        <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
-        <iconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</iconUrl>
-        <requireLicenseAcceptance>true</requireLicenseAcceptance>
-        <description>Interactive Extensions Providers Library used to build query providers and express queries over enumerable sequences.</description>
-        <copyright>Copyright (C) Microsoft Corporation</copyright>
-        <language>en-US</language>
-        <tags>Ix Interactive Extensions Enumerable</tags>
-        <dependencies>
-          <group>
-            <dependency id="System.Interactive" version="$version$" />
-          </group>
-          <group targetFramework="netstandard1.0">
-            <dependency id="System.Interactive" version="$version$" />
-            <dependency id="System.Linq.Expressions" version="4.0.11-rc2-24027" />
-            <dependency id="System.Linq.Queryable" version="4.0.1-rc2-24027" />
-          </group>
-        </dependencies>
-        <frameworkAssemblies>
-            <frameworkAssembly assemblyName="System" targetFramework="net4" />
-            <frameworkAssembly assemblyName="System" targetFramework="sl5" />
-            <frameworkAssembly assemblyName="System.Core" targetFramework="net4" />
-            <frameworkAssembly assemblyName="System.Core" targetFramework="sl5" />
-        </frameworkAssemblies>
-    </metadata>   
-    <files>
-        <file src="..\System.Interactive.Providers\bin\$configuration$\**\System.Interactive.Providers.*" exclude="**\*.deps.json" target="lib" />
-    </files>
+  <metadata>
+    <id>System.Interactive.Providers</id>
+    <version>$version$</version>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</licenseUrl>
+    <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
+    <iconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</iconUrl>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
+    <description>Interactive Extensions Providers Library used to build query providers and express queries over enumerable sequences.</description>
+    <copyright>Copyright (C) Microsoft Corporation</copyright>
+    <language>en-US</language>
+    <tags>Ix Interactive Extensions Enumerable</tags>
+    <dependencies>
+      <group>
+        <dependency id="System.Interactive" version="$version$" />
+      </group>
+      <group targetFramework="netstandard1.0">
+        <dependency id="System.Interactive" version="$version$" />
+        <dependency id="System.Collections" version="4.0.11-rc2-24027" />
+        <dependency id="System.Globalization" version="4.0.11-rc2-24027" />
+        <dependency id="System.Linq" version="4.1.0-rc2-24027" />
+        <dependency id="System.Linq.Expressions" version="4.0.11-rc2-24027" />
+        <dependency id="System.Linq.Queryable" version="4.0.1-rc2-24027" />
+        <dependency id="System.Reflection" version="4.1.0-rc2-24027" />
+        <dependency id="System.Resources.ResourceManager" version="4.0.1-rc2-24027" />
+        <dependency id="System.Runtime" version="4.1.0-rc2-24027" />
+      </group>
+      <group targetFramework="net40" />
+      <group targetFramework="net45" />
+      <group targetFramework="sl5" />
+    </dependencies>
+    <frameworkAssemblies>
+      <frameworkAssembly assemblyName="System" targetFramework="net4" />
+      <frameworkAssembly assemblyName="System" targetFramework="sl5" />
+      <frameworkAssembly assemblyName="System.Core" targetFramework="net4" />
+      <frameworkAssembly assemblyName="System.Core" targetFramework="sl5" />
+    </frameworkAssemblies>
+  </metadata>
+  <files>
+    <file src="..\System.Interactive.Providers\bin\$configuration$\**\System.Interactive.Providers.*" exclude="**\*.deps.json" target="lib" />
+  </files>
 </package>
