--- a/Ix.NET/Source/NuSpecs/System.Interactive.nuspec
+++ b/Ix.NET/Source/NuSpecs/System.Interactive.nuspec
@@ -1,31 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
-    <metadata>
-        <id>System.Interactive</id>
-        <version>$version$</version>
-        <authors>Microsoft</authors>
-        <owners>Microsoft</owners>
-        <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</licenseUrl>
-        <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
-        <iconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</iconUrl>
-        <requireLicenseAcceptance>true</requireLicenseAcceptance>
-        <description>Interactive Extensions Main Library used to express queries over enumerable sequences.</description>
-        <copyright>Copyright (C) Microsoft Corporation</copyright>
-        <language>en-US</language>
-        <tags>Ix Interactive Extensions Enumerable</tags>
-        <frameworkAssemblies>
-            <frameworkAssembly assemblyName="System" targetFramework="net4" />
-            <frameworkAssembly assemblyName="System" targetFramework="sl5" />
-            <frameworkAssembly assemblyName="System.Core" targetFramework="net4" />
-            <frameworkAssembly assemblyName="System.Core" targetFramework="sl5" />
-        </frameworkAssemblies>
-        <dependencies>
-          <group targetFramework="netstandard1.0">
-            <dependency id="NETStandard.Library" version="1.5.0-rc2-24027" />
-          </group>
-        </dependencies>
-    </metadata>
-    <files>
-        <file src="..\System.Interactive\bin\$configuration$\**\System.Interactive.*" exclude="**\*.deps.json" target="lib" />
-    </files>
+  <metadata>
+    <id>System.Interactive</id>
+    <version>$version$</version>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <licenseUrl>http://go.microsoft.com/fwlink/?LinkID=261272</licenseUrl>
+    <projectUrl>http://go.microsoft.com/fwlink/?LinkId=261273</projectUrl>
+    <iconUrl>http://go.microsoft.com/fwlink/?LinkId=261274</iconUrl>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
+    <description>Interactive Extensions Main Library used to express queries over enumerable sequences.</description>
+    <copyright>Copyright (C) Microsoft Corporation</copyright>
+    <language>en-US</language>
+    <tags>Ix Interactive Extensions Enumerable</tags>
+    <frameworkAssemblies>
+      <frameworkAssembly assemblyName="System" targetFramework="net4" />
+      <frameworkAssembly assemblyName="System" targetFramework="sl5" />
+      <frameworkAssembly assemblyName="System.Core" targetFramework="net4" />
+      <frameworkAssembly assemblyName="System.Core" targetFramework="sl5" />
+    </frameworkAssemblies>
+    <dependencies>
+      <group targetFramework="netstandard1.0">
+        <dependency id="NETStandard.Library" version="1.5.0-rc2-24027" />
+        <dependency id="System.Collections" version="4.0.11-rc2-24027" />
+        <dependency id="System.Diagnostics.Debug" version="4.0.11-rc2-24027" />
+        <dependency id="System.Linq" version="4.1.0-rc2-24027" />
+        <dependency id="System.Resources.ResourceManager" version="4.0.1-rc2-24027" />
+        <dependency id="System.Runtime" version="4.1.0-rc2-24027" />
+        <dependency id="System.Runtime.Extensions" version="4.1.0-rc2-24027" />
+        <dependency id="System.Threading" version="4.0.11-rc2-24027" />
+        <dependency id="System.Threading.Tasks" version="4.0.11-rc2-24027" />
+      </group>
+      <group targetFramework="net40" />
+      <group targetFramework="net45" />
+      <group targetFramework="sl5" />
+    </dependencies>
+  </metadata>
+  <files>
+    <file src="..\System.Interactive\bin\$configuration$\**\System.Interactive.*" exclude="**\*.deps.json" target="lib" />
+  </files>
 </package>
