--- a/Ix.NET/Source/System.Interactive.Providers/project.json
+++ b/Ix.NET/Source/System.Interactive.Providers/project.json
@@ -80,7 +80,10 @@
         ]
       },
       "dependencies": {
-      
+        "Microsoft.TargetingPack.Private.Silverlight.v5": {
+          "version": "1.0.2",
+          "type": "platform"
+        }
       }
     }
   }
