--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -13,7 +13,7 @@ commit-message-incrementing: Enabled
 branches:
   master:
     mode: ContinuousDeployment
-    tag: rc1
+    tag: build
     increment: Patch
     prevent-increment-of-merged-branch-version: true
     track-merge-target: false
