--- a/Rx.NET/Integration/NuGet.Config
+++ b/Rx.NET/Integration/NuGet.Config
@@ -1,13 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <packageSources>
-    <clear />
-    <add key="myget.org dotnet-core" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
+  <packageSources>    
+    <add key="AppVeyor (CI) rxnet" value="https://ci.appveyor.com/nuget/rx-net-ljfp6fos5bxs" />
     <add key="myget.org rxnet" value="https://www.myget.org/F/rxnet/api/v3/index.json" />
     <add key="Build Packages" value="https://www.myget.org/F/c037199d-41df-4567-b966-25ff65324688/api/v3/index.json" />
     <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />        
-  </packageSources>
-  <config>
-    <!--<add key="repositoryPath" value="..\..\packages" />-->
-  </config>
+  </packageSources>  
 </configuration>
