--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -31,7 +31,7 @@ branches:
     track-merge-target: false
   (pull|pull\-requests|pr)[/-]:
     mode: ContinuousDeployment
-    tag: PullRequest
+    tag: PullReq
     increment: Inherit
     prevent-increment-of-merged-branch-version: false
     tag-number-pattern: '[/-](?<number>\d+)[-/]'
