--- a/appveyor.ix.yml
+++ b/appveyor.ix.yml
@@ -26,7 +26,7 @@ build_script:
 
 test: off
 artifacts:
-- path: .\Ix.NET\source\artifacts\*.nupkg
+- path: .\artifacts\*.nupkg
   
 deploy:
   provider: NuGet
