--- a/.vsts.rx-pr.yml
+++ b/.vsts.rx-pr.yml
@@ -1,6 +1,9 @@
-queue:
-  name: Hosted VS2017
-  
+queue: Hosted VS2017
+
+variables: 
+  BuildConfiguration: Release
+  BuildPlatform: Any CPU
+    
 steps:
 - task: BatchScript@1
   inputs:
