--- a/Rx.NET/Source/benchmarks/Benchmarks.System.Reactive/Benchmarks.System.Reactive.csproj
+++ b/Rx.NET/Source/benchmarks/Benchmarks.System.Reactive/Benchmarks.System.Reactive.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net46</TargetFramework>
     <Optimize>true</Optimize>
+    <IsPackable>false</IsPackable>
     <Configurations>Current Sources;Rx.net 3.1.1;Rx.net 4.0</Configurations>
   </PropertyGroup>
 
