--- a/.vsts.ix-shared.yml
+++ b/.vsts.ix-shared.yml
@@ -4,7 +4,7 @@ parameters:
 steps:
 - task: DotNetCoreInstaller@0
   inputs:
-    version: '2.1.400-preview-009063'
+    version: '2.1.302'
 
 - task: DotNetCoreCLI@2
   inputs:
