--- a/.vsts.rx-shared.yml
+++ b/.vsts.rx-shared.yml
@@ -4,7 +4,7 @@ parameters:
 steps:
 - task: DotNetCoreInstaller@0
   inputs:
-    version: '2.1.400-preview-009063'
+    version: '2.1.302'
 
 - task: NuGetToolInstaller@0
   displayName: Use NuGet 4.7.0
