--- a/.vsts.rx-shared.yml
+++ b/.vsts.rx-shared.yml
@@ -2,29 +2,27 @@ parameters:
   signStep: []
     
 steps:
+- task: DotNetCoreCLI@2  
+  inputs:
+    command: custom
+    custom: tool
+    arguments: install --tool-path . nbgv
+  displayName: Install NBGV tool
+  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
+
+- script: nbgv cloud -p Rx.NET\Source
+  displayName: Set Version
+  condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
+  
 - task: DotNetCoreInstaller@0
   inputs:
     version: '2.1.400-preview-009171'
 
-- task: NuGetToolInstaller@0
-  displayName: Use NuGet 4.7.0
-  inputs:
-    versionSpec: 4.7.0
-
-- task: DotNetCoreCLI@2
-  inputs:
-    command: build
-    projects: Rx.NET/Source/build/setversion.csproj
-    arguments: -c $(BuildConfiguration)   
-  displayName: Set Version
-  condition: eq(variables['system.pullrequest.isfork'], false)
-
-- task: VSBuild@1
+- task: MSBuild@1
   displayName: Build System.Reactive.sln
   inputs:
-    solution: Rx.NET/Source/System.Reactive.sln
-    vsVersion: 15.0
-    msbuildArgs: /restore /t:build /p:CreatePackage=true /p:NoPackageAnalysis=true /p:PackageOutputPath=$(Build.ArtifactStagingDirectory)\artifacts
+    solution: Rx.NET/Source/System.Reactive.sln    
+    msbuildArguments: /restore /t:build /p:CreatePackage=true /p:NoPackageAnalysis=true /p:PackageOutputPath=$(Build.ArtifactStagingDirectory)\artifacts
     platform: $(BuildPlatform)
     configuration: $(BuildConfiguration)
     maximumCpuCount: true
@@ -36,12 +34,11 @@ steps:
     arguments: pack Rx.NET/Source/facades/System.Reactive.Compatibility.nuspec -Version $(NBGV_NuGetPackageVersion) -MinClientVersion 2.12 -NoPackageAnalysis -outputdirectory $(Build.ArtifactStagingDirectory)\artifacts
   condition: eq(variables['system.pullrequest.isfork'], false)
 
-- task: VSBuild@1
+- task: MSBuild@1
   displayName: Build for Test (ppdb) workaround
   inputs:
-    solution: Rx.NET/Source/System.Reactive.sln
-    vsVersion: 15.0
-    msbuildArgs: /t:build /p:DebugType=portable
+    solution: Rx.NET/Source/System.Reactive.sln    
+    msbuildArguments: /t:build /p:DebugType=portable
     platform: $(BuildPlatform)
     configuration: $(BuildConfiguration)
     maximumCpuCount: true
