--- a/Rx.NET/Source/facades/System.Reactive.Experimental/System.Reactive.Experimental.csproj
+++ b/Rx.NET/Source/facades/System.Reactive.Experimental/System.Reactive.Experimental.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="MSBuild.Sdk.Extras">
 
   <PropertyGroup>
-    <TargetFrameworks>net46</TargetFrameworks>
+    <TargetFrameworks>net46;netstandard2.0;uap10.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
