--- a/Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
+++ b/Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
@@ -9,6 +9,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Api\ApiApprovalTests.Aliases.approved.cs" />
+    <Compile Remove="Api\ApiApprovalTests.Core.approved.cs" />
+    <Compile Remove="Api\ApiApprovalTests.Testing.approved.cs" />
+    
+    <None Include="Api\ApiApprovalTests.Aliases.approved.cs" />
+    <None Include="Api\ApiApprovalTests.Core.approved.cs" />
+    <None Include="Api\ApiApprovalTests.Testing.approved.cs" />
+    
+    <None Include="Api\ApiApprovalTests.Aliases.approved.cs" />
+    <None Include="Api\ApiApprovalTests.Core.approved.cs" />
+    <None Include="Api\ApiApprovalTests.Testing.approved.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="xunit.runner.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
